--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "386226f7-b2ec-4596-8524-116a7cb90c91",
    "metadata": {},
    "outputs": [],
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "6a6d985a-afc6-4c33-93f4-014b61cc467d",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "6eb8adaf-1d92-4d07-b093-0fce261218aa",
    "metadata": {},
    "outputs": [],
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "7dfcc57b-a248-4020-89f7-22f2daf2f3cc",
    "metadata": {},
    "outputs": [],
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "7b98c46f-684d-46dd-b499-498aaff54d3c",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        "<KeysViewHDF5 ['axis0', 'axis1', 'block0_items', 'block0_values']>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "3d6e49d2-be58-490a-af75-49a9ab69180c",
    "metadata": {},
    "outputs": [
@@ -78,7 +78,7 @@
        "<HDF5 dataset \"axis0\": shape (1000,), type \"<f8\">"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "a1b25d69-0d4d-4144-9a9c-171f958b3581",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "bfa7286e-d6d5-402c-a47d-8ef2a483d28d",
    "metadata": {},
    "outputs": [],
@@ -314,7 +314,44 @@
    "id": "27f4a4c4-9d93-41ba-ae8f-bc8c3d5cb207",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def gamma2_polar(inarr,factor=20):    \n",
+    "    nd = inarr.shape[0]\n",
+    "    nexpand = int(factor*nd)\n",
+    "\n",
+    "    flux = numpy.zeros(nexpand)\n",
+    "    for i in range(nd*2-1):\n",
+    "        x = numpy.abs(i+1-nd)\n",
+    "        flux[i] = 2*numpy.sqrt(nd**2-x*x)* inarr[x]\n",
+    "    flux = flux/flux.sum()\n",
+    "    gamma = rfft(flux)\n",
+    "    gamma2 = numpy.abs(gamma)**2\n",
+    "    return gamma2\n",
+    "\n",
+    "nd = axis0[:].shape[0]\n",
+    "delta = axis0[1]-axis0[0]\n",
+    "drad = 0.55e15\n",
+    "ndisk = 2*drad/delta\n",
+    "# nexpand = int(factor*ndisk)\n",
+    "    \n",
+    "for index in [maxorder[0],idx3700,maxorder[-1],idx6355,idx8750]:\n",
+    "    # flux = numpy.zeros(nexpand)\n",
+    "    # for i in range(nd*2-1):\n",
+    "    #     x = numpy.abs(i+1-nd)\n",
+    "    #     flux[i] = 2*numpy.sqrt(nd**2-x*x)* block0_values[index,x]\n",
+    "    # flux = flux/flux.sum()\n",
+    "    # gamma = rfft(flux)\n",
+    "    # gamma2 = numpy.abs(gamma)**2\n",
+    "    gamma2 = gamma2_polar(block0_values[index,:])\n",
+    "    plt.plot(numpy.arange(gamma2.shape[0])*numpy.pi/(gamma2.shape[0]/ndisk),gamma2,label=r\"$\\lambda={:.2f}\\AA$\".format(lambdas[index]))\n",
+    "zeta = numpy.arange(0,nd,0.01)\n",
+    "plt.plot(zeta,(2*jv(1,zeta)/zeta)**2,label='Airy',ls='dotted',lw=2)\n",
+    "plt.ylabel(r\"$|\\gamma|^2$\")\n",
+    "plt.xlabel(r\"$\\zeta$\")\n",
+    "plt.xlim((0,10))\n",
+    "plt.legend()\n",
+    "plt.savefig('text.pdf')"
+   ]
   },
   {
    "cell_type": "code",
